--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=postgres
 micronaut.application.name=cinemapp
 datasources.default.username=postgres
-datasources.default.password=root
+datasources.default.password=1f3f02109cfa45ff8ad764d3b623e44b
 datasources.default.jdbc-url=jdbc:postgresql://localhost:5432/postgres
 micronaut.security.intercept-url-map[1].pattern=/swagger-ui/**
 datasources.default.driver-class-name=org.postgresql.Driver
@@ -18,3 +18,4 @@ micronaut.router.static-resources.jsonschema.mapping=/schemas/**
 micronaut.router.static-resources.jsonschema.paths=classpath\:META-INF/schemas
 logger.levels.org.jooq = DEBUG
 micronaut.security.enabled=false
+micronaut.security.csrf.enabled=false
