--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ micronaut.router.static-resources.jsonschema.paths=classpath\:META-INF/schemas
 logger.levels.org.jooq = DEBUG
 micronaut.security.enabled=false
 micronaut.security.csrf.enabled=false
+micronaut.server.cors.enabled=true
+micronaut.server.cors.localhost-pass-through=true
