--- a/cinemapp-frontend/package.json
+++ b/cinemapp-frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.5",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
